# boiling_flow

./: .gitignore  .readthedocs.yaml  LICENSE  README.rst  environment.yml  pyproject.toml
boiling_flow/: __init__.py  _utils.py  boiling_flow.py  parameter_estimation.py
demo/: demo_utils.py  environment.yml  generate_phase_screen_data.py  get_demo_data_server.sh  parameter_estimates_from_measured_data.py  results_from_simulated_data.py
dev_scripts/: build_docs.sh  clean_install_all.sh  create_conda_test_environment.sh  deep_clean_conda.sh
docs/: Makefile  README.rst
docs/_templates/: class_template.rst  module_template.rst  package.rst
docs/source/: api.rst  boiling_flow.rst  conf.py  demo_utils.rst  docs.rst  index.rst  install.rst  parameter_estimation.rst  references.rst  refs.bib  utils.rst
