[build-system]
requires = ["setuptools>=64,<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boiling_flow"
version = "0.1"
description = "Phase screen generation for aero-optics using boiling flow"
readme = "README.rst"
license = { file = "LICENSE" }
authors = [
    { name = "Boiling Flow development team", email = "jeffrey.utley@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy"
]

[project.optional-dependencies]
docs = [
     "sphinx",
     "sphinxcontrib-bibtex",
     "sphinx-book-theme>=1.0.1",
     "sphinx-design",
     "sphinx-copybutton"
]
demo = [
    "matplotlib",
    "Pillow>=9.1"
]

[tool.setuptools.packages.find]
include = ["boiling_flow*"]

[project.urls]
source = "https://github.com/jeffreyutley/boiling_flow"
